library/src/libqdatetimeedit.h

typedef struct QDate QDate;
typedef struct QDateEdit QDateEdit;
typedef struct QMetaObject QMetaObject;
typedef struct QWidget QWidget;
QDateEdit* QDateEdit_new(QWidget* parent);
QDateEdit* QDateEdit_new2();
QDateEdit* QDateEdit_new3(QDate* date);
QDateEdit* QDateEdit_new4(QDate* date, QWidget* parent);
QMetaObject* QDateEdit_MetaObject(const QDateEdit* self);
void* QDateEdit_Metacast(QDateEdit* self, const char* param1);
int QDateEdit_Metacall(QDateEdit* self, int param1, int param2, void** param3);
libqt_string QDateEdit_Tr(const char* s);
void QDateEdit_UserDateChanged(QDateEdit* self, QDate* date);
libqt_string QDateEdit_Tr2(const char* s, const char* c);
libqt_string QDateEdit_Tr3(const char* s, const char* c, int n);