src/libqdatetimeedit.bf

public struct QDateEdit
{
	[LinkName("QDateEdit_new")]
	public static extern void* QDateEdit_new(QWidget parent);
	[LinkName("QDateEdit_new2")]
	public static extern void* QDateEdit_new2();
	[LinkName("QDateEdit_new3")]
	public static extern void* QDateEdit_new3(QDate date);
	[LinkName("QDateEdit_new4")]
	public static extern void* QDateEdit_new4(QDate date, QWidget parent);
	[LinkName("QDateEdit_MetaObject")]
	public static extern QMetaObject QDateEdit_MetaObject(void* c_this);
	[LinkName("QDateEdit_Metacast")]
	public static extern void QDateEdit_Metacast(void* c_this, char8[] param1);
	[LinkName("QDateEdit_Metacall")]
	public static extern int32 QDateEdit_Metacall(void* c_this, int64 param1, int32 param2, void param3);
	[LinkName("QDateEdit_Tr")]
	public static extern char8[] QDateEdit_Tr(char8[] s);
	[LinkName("QDateEdit_UserDateChanged")]
	public static extern void QDateEdit_UserDateChanged(void* c_this, QDate date);
	[LinkName("QDateEdit_Tr2")]
	public static extern char8[] QDateEdit_Tr2(char8[] s, char8[] c);
	[LinkName("QDateEdit_Tr3")]
	public static extern char8[] QDateEdit_Tr3(char8[] s, char8[] c, int32 n);
}